--- a/app/views/tasks/new.html.slim
+++ b/app/views/tasks/new.html.slim
@@ -14,5 +14,5 @@ h1 タスクの新規登録
     = f.text_field :name, class: 'form-control', id: 'task_name'
   .form-group
     = f.label :description
-    = f.text_field :description, rows: 5, class: 'form-control', id: 'task_description'
+    = f.text_area :description, rows: 5, class: 'form-control', id: 'task_description'
   = f.submit '確認', class: 'btn btn-primary'
