--- a/app/views/tasks/_form.html.slim
+++ b/app/views/tasks/_form.html.slim
@@ -13,4 +13,7 @@
   .form-group
     = f.label :description
     = f.text_field :description, row: 5, class: 'form-control', id: 'task_description'
+  .form-group
+    = f.label :image
+    = f.file_field :image, class: 'form-con'
   = f.submit nil, class: 'btn btn-primary'
